force-app/main/default/objects/RadioLogs__c/RadioLogs__c.object-meta.xml
<CustomObject>
    <label>Radio Logs</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Nome de RadioLogs</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Radio Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>