force-app/main/default/objects/RadioLogs__c/fields/ANV__c.field-meta.xml
<CustomField>
    <fullName>ANV__c</fullName>
    <formula>Voo__r.Prefixo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ANV</label>
    <type>Text</type>
</CustomField>