force-app/main/default/objects/RadioLogs__c/fields/ATDDEST1__c.field-meta.xml
<CustomField>
    <fullName>ATDDEST1__c</fullName>
    <label>ATD DEST-1</label>
    <type>DateTime</type>
</CustomField>