force-app/main/default/objects/RadioLogs__c/fields/Autonomy__c.field-meta.xml
<CustomField>
    <fullName>Autonomy__c</fullName>
    <label>Autonomy</label>
    <type>Time</type>
</CustomField>