force-app/main/default/objects/RadioLogs__c/fields/ChaveUnica__c.field-meta.xml
<CustomField>
    <fullName>ChaveUnica__c</fullName>
    <label>Chave única</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>