force-app/main/default/objects/RadioLogs__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <formula>Voo__r.DataVoo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data</label>
    <type>Date</type>
</CustomField>