force-app/main/default/objects/RadioLogs__c/fields/DataHoraRadioLogIn__c.field-meta.xml
<CustomField>
    <fullName>DataHoraRadioLogIn__c</fullName>
    <label>Data / Hora Log In</label>
    <type>DateTime</type>
</CustomField>