force-app/main/default/objects/RadioLogs__c/fields/DataHoraRadioLogOut__c.field-meta.xml
<CustomField>
    <fullName>DataHoraRadioLogOut__c</fullName>
    <label>Data / Hora Log Out</label>
    <type>DateTime</type>
</CustomField>