force-app/main/default/objects/RadioLogs__c/fields/DataVoo__c.field-meta.xml
<CustomField>
    <fullName>DataVoo__c</fullName>
    <formula>Voo__r.DataHoraVoo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data voo</label>
    <type>DateTime</type>
</CustomField>