force-app/main/default/objects/RadioLogs__c/fields/DataVooFormat__c.field-meta.xml
<CustomField>
    <fullName>DataVooFormat__c</fullName>
    <formula>LPAD(TEXT(DAY(DATEVALUE(Voo__r.DataVoo__c))),2, &apos;0&apos;)+&apos;/&apos;+
LPAD(TEXT(MONTH(DATEVALUE(Voo__r.DataVoo__c))),2, &apos;0&apos;)+&apos;/&apos;+
RIGHT(TEXT(YEAR(DATEVALUE(Voo__r.DataVoo__c))),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DataVooFormat</label>
    <type>Text</type>
</CustomField>