force-app/main/default/objects/RadioLogs__c/fields/ETAFinal__c.field-meta.xml
<CustomField>
    <fullName>ETAFinal__c</fullName>
    <label>ETA Final</label>
    <type>DateTime</type>
</CustomField>