force-app/main/default/objects/RadioLogs__c/fields/FLTLV1__c.field-meta.xml
<CustomField>
    <fullName>FLTLV1__c</fullName>
    <label>FLT LV1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>