force-app/main/default/objects/RadioLogs__c/fields/FLTLV2__c.field-meta.xml
<CustomField>
    <fullName>FLTLV2__c</fullName>
    <label>FLT LV2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>