force-app/main/default/objects/RadioLogs__c/fields/PAXCarga__c.field-meta.xml
<CustomField>
    <fullName>PAXCarga__c</fullName>
    <label>PAX / Carga</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>