force-app/main/default/objects/RadioLogs__c/fields/PAXCargaFinal__c.field-meta.xml
<CustomField>
    <fullName>PAXCargaFinal__c</fullName>
    <label>PAX / Carga Final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>