force-app/main/default/objects/RadioLogs__c/fields/Rota__c.field-meta.xml
<CustomField>
    <fullName>Rota__c</fullName>
    <formula>Voo__r.RotaAbreviada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rota</label>
    <type>Text</type>
</CustomField>