force-app/main/default/objects/RadioLogs__c/fields/Startup__c.field-meta.xml
<CustomField>
    <fullName>Startup__c</fullName>
    <label>Startup</label>
    <type>DateTime</type>
</CustomField>