force-app/main/default/objects/RadioLogs__c/fields/Voo__c.field-meta.xml
<CustomField>
    <fullName>Voo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voo</label>
    <referenceTo>Voo__c</referenceTo>
    <relationshipLabel>Radio Logs</relationshipLabel>
    <relationshipName>Radio_LogsVoo</relationshipName>
    <type>Lookup</type>
</CustomField>