force-app/main/default/objects/RadioLogs__c/fields/VooName__c.field-meta.xml
<CustomField>
    <fullName>VooName__c</fullName>
    <formula>HYPERLINK(Voo__c, Voo__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VooName</label>
    <type>Text</type>
</CustomField>