force-app/main/default/objects/RadioLogs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Voo__c</columns>
    <columns>ETA__c</columns>
    <columns>Autonomy__c</columns>
    <columns>FLTLV1__c</columns>
    <columns>PAXCarga__c</columns>
    <columns>ATDDEST1__c</columns>
    <columns>ETAFinal__c</columns>
    <columns>FLTLV2__c</columns>
    <columns>PAXCargaFinal__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>